# ProjectAdam

./: README.md  main.py  pyproject.toml
.streamlit/: config.toml
