[tool.poetry]
name = "projectadam"
version = "0.1.0"
description = ""
authors = ["DanielAdam1992 <116721940+DanielAdam1992@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
streamlit = "^1.47.1"
faker = "^37.5.3"
matplotlib = "^3.10.5"
seaborn = "^0.13.2"
folium = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
